RESOLVED FIXED136600
HTMLElement.cpp does not compile with new clang
https://bugs.webkit.org/show_bug.cgi?id=136600
Summary HTMLElement.cpp does not compile with new clang
David Kilzer (:ddkilzer)
Reported 2014-09-06 07:00:50 PDT
HTMLElement.cpp fails to build with new clang: Source/WebCore/html/HTMLElement.cpp:545:10: error: 'this' pointer cannot be null in well-defined C++ code; pointer may be assumed to always convert to true [-Werror,-Wundefined-bool-conversion] if (!this || !parentNode()) ~^~~~ 1 error generated. The |!this| check was added in <http://trac.webkit.org/r75738>.
Attachments
Patch v1 (1.69 KB, patch)
2014-09-06 07:03 PDT, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2014-09-06 07:03:15 PDT
Created attachment 237736 [details] Patch v1
WebKit Commit Bot
Comment 2 2014-09-06 08:03:14 PDT
Comment on attachment 237736 [details] Patch v1 Clearing flags on attachment: 237736 Committed r173355: <http://trac.webkit.org/changeset/173355>
WebKit Commit Bot
Comment 3 2014-09-06 08:03:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.