HTMLElement.cpp does not compile with new clang <http://webkit.org/b/136600>

Reviewed by Chris Fleizach.

Fixes the following static analyzer warning:

    Source/WebCore/html/HTMLElement.cpp:545:10: error: 'this' pointer cannot be null in well-defined C++ code; pointer may be assumed to always convert to true [-Werror,-Wundefined-bool-conversion]
        if (!this || !parentNode())
            ~^~~~

* html/HTMLElement.cpp:
(WebCore::HTMLElement::setOuterText): Remove "!this" check added
in r75738.  It would only cover up real bugs, and isn't even hit
in layout tests.


Canonical link: https://commits.webkit.org/154417@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173355 268f45cc-cd09-0410-ab3c-d52691b4dbfc